# Uart-Async-F446RE-and-L432KC

./: CMakeLists.txt  README.md  prj.conf
applications/: main_async_uart.c  main_receive_uart.c  uart_receiver_nucle.c  uart_sender_nucle.c
boards/: nucleo_L432kc.overlay  nucleo_f446re.overlay  stm32f4_uart.overlay
